--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<span>Get in touch</span>
 			<span class="emoji pointer"></span>
 			<span id="emailme">
-				<a href="mailto:anuragparashar03@gmail.com" target="_blank" class="highlight-link">anuragparashar03@gmail.com</a>
+				<a href="mailto:utkarsh.gupta0311@gmail.com" target="_blank" class="highlight-link">utkarsh.gupta0311@gmail.com</a>
 			</span>
 		</h3>
 	</header>
