--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 		
 			<a href="https://github.com/utkarsh123871" target="_blank" title="github"> 
 				<span class="text">
-					twitter
+					Github
 				</span>
 				<img src="images/icone-github-bleu.png" alt="github">
 			</a> 
